# vibrant

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
.mango/: .instructions  clear  console
codex_tui/: __init__.py  __main__.py  app.py  codex_client.py  history.py  models.py  session_manager.py
docs/: agent-role-architecture.md  architecture-layer-refactor-phase2-plan.md  architecture-layer-refactor-plan.md  backend-policy-loops-e2e-plan.md  debug-findings-2026-03-15.md  durability-recovery.md  durable-session-protocol-plan.md  embedded_auth.md  git-worktree-redesign-plan.md  identity-consistency-cleanup-plan.md  mcp-rebirth.md  mcp-schema-mitigation.md  mcp_http_authz.md  mcp_testing.md  migrate-instruction.md  orchestrator-layered-api.md  orchestrator-rebrith.md  orchestrator-storage-refactor.md  phase-2-role-results.md  plan.md  policy-loop-reorg-plan.md  provider-arg-append.md  spec.md  structured_markdown.md  tui-chat.md  tui-todo.md  tui.md
scripts/: mcp_dev_server.py  task_status_preview.py
tests/: test_agent_callback_errors.py  test_agent_identity_models.py  test_agent_output.py  test_agent_output_projection.py  test_agent_output_widget.py  test_agent_registry_ids.py  test_agent_runtime_service.py  test_bootstrap_mock_provider.py  test_chat_panel.py  test_claude_provider_adapter.py  test_code_agent_lifecycle.py  test_codex_client.py  test_codex_provider_adapter.py  test_codex_provider_logging.py  test_config.py  test_consensus_io.py  test_consensus_view.py  test_explore_and_test_agents.py  test_gatekeeper.py  test_gatekeeper_prompt.py  test_git_manager.py  test_git_workspace_service.py  test_init.py  test_input_bar.py  test_main_cli.py  test_mcp_auth_scopes.py  test_mcp_auth_service.py  test_mcp_bearer_auth.py  test_mcp_schema_flattening.py  test_merge_agent.py  test_models_phase03.py  test_ndjson_logger.py  test_orchestrator_architecture.py  test_orchestrator_bootstrap.py  test_orchestrator_conversation.py  test_orchestrator_mcp.py  (+29 more)
(+288 files in other folders)
