[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibrant"
version = "0.1.0"
description = "A terminal UI for orchestrating multiple Codex agent workflows"
requires-python = ">=3.11"
dependencies = [
    "textual[syntax]>=3.0",
    "pydantic>=2.0",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "textual-dev>=1.0",
]
mcp = [
    "authlib>=1.6",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
[project.scripts]
vibrant = "vibrant.__main__:main"

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
]
