[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibrant"
version = "0.1.0"
description = "A terminal UI for orchestrating multiple Codex agent workflows"
requires-python = ">=3.11"
dependencies = [
    "textual>=3.0",
    "pydantic>=2.0",
    "pytest-asyncio>=1.3.0",
    "claude-agent-sdk>=0.1.48",
    "mcp>=1.26.0",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "textual-dev>=1.0",
]
[project.scripts]
vibrant = "vibrant.__main__:main"

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
]
